# PromptCraft

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  .flake8  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08b3a5847153_create_rounds_table.py  259c68630295_add_round_id_and_target_image_url_to_.py  71a50d844886_relax_legacy_user_profiles_columns.py  777e92f9a12c_add_missing_attempt_columns.py  7d1171469d97_align_users_table_to_user_profiles_.py  8f3c1a2b4d50_add_challenges_table.py  a3e7c81f9b22_add_streak_columns_to_user_profiles.py  e0736feb8889_create_rounds_table.py
backend/app/: __init__.py  constants.py  db.py  exceptions.py  main.py  response.py
backend/app/auth/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py
backend/app/challenge/: __init__.py  constants.py  exceptions.py  models.py
backend/app/models/: round.py
backend/app/round/: __init__.py  constants.py  exceptions.py  models.py
backend/app/stats/: constants.py  db.py  exceptions.py  models.py  service.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_stats_me.py  test_stats_service.py
backend/tests/auth/: __init__.py  _common.py  test_constants_module.py  test_dependencies_get_auth_service.py  test_dependencies_get_current_user.py  test_init_module.py  test_login_request_validate_email.py  test_register_request_validate_email.py  test_router_module.py  test_token_response_default.py
(+298 files in other folders)
